# JDBot

./: .gitignore  B.py  BotConfig.py  CONTRIBUTING.md  ClientConfig.py  DatabaseConfig.py  DatabaseControl.py  GetPfp.py  LICENSE  config.ini  config_val.py  contribution.md  contributions.md  example.env  example.service  main.py  money_system.py  pyproject.toml  raw.env  readme.md  requirements.txt  schema.sql  sus_users.db  sus_users.db-journal  sus_users.json  userinfo.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: auto-poetry.yml  ci.yml  codeql-analysis.yml
aioimgur/aioimgur/: client.py
asuna_api/: README.md  __init__.py  client.py  http.py  image.py  minecraft.py
asuna_api/asuna_api/: http.py  readme.md
cogs/: Bot.py  application.yml  bot.py  dev.py  dice.py  economy.py  extra.py  global.py  help.py  image.py  info.py  jishaku.py  jsk.py  listeners.py  mod.py  mod_webhook.py  music.py  order.py  owner.py  reddit.py  reddit_twittter.py  slash.py  temperature_locale.json  test.py  test.py.REMOTE  test_BACKUP_185.py  tickets.py  top.py  webhook.py  work.py
devcontainer/: token.env
locales/: convert_speed.json  convert_temperature.json
super_api/: client.py  image.py  readme.md
tmpnlpnnv8g/: pyvenv.cfg
utils/: Pet.py  __init__.py  buttons.py  checks.py  converters.py  embeds.py  emoji.py  extra.py  fuzzy.py  image.py  menus.py  modals.py  paginators.py  selects.py  tweet.py  views.py
