[tool.poetry]
name = "jdbot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
aioimgur = "^0.1.1"
asuna-api = "^0.2.8"
async-cse = "^0.3.0"
asyncdagpi = "^3.3.2"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
sr-api = {git = "https://github.com/iDutchy/sr_api"}
jishaku = {git = "https://github.com/Gorialis/jishaku"}
"mystbin.py" = "^2.1.0"
psutil = "^5.8.0"
"discordlists.py" = "^1.1.1"
emoji = "^1.2.0"
"alexflipnote.py" = "^2.4.0"
asyncpraw = "^7.3.1"
tweepy = {git = "https://github.com/tweepy/tweepy.git"}
doc-search = {git = "https://github.com/Tom-the-Bomb/doc-search"}
topggpy = "^1.1.0"
autopep8 = "^1.5.7"
yapf = "^0.31.0"
CairoSVG = "^2.5.2"
python-cse = {git = "https://github.com/JDJGInc/python-cse"}
async-cleverbot = "^0.2.2"
aiogifs = {git = "https://github.com/moanie/aiogifs.git", branch = "main"}
discord-ext-menus-views = {git = "https://github.com/oliver-ni/discord-ext-menus-views"}
better-profanity = "^0.7.0"
"discord.py" = {git = "https://github.com/iDevision/enhanced-discord.py", branch = "2.0"}
async-tio = "^1.1.0"
jeyyapi = {git = "https://github.com/JeyyGit/jeyyapi", branch = "main"}
tabulate = "^0.8.9"
asyncpg = "^0.25.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
