[tool.poetry]
name = "jdbot"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asuna-api = "^0.2.8"
async-cse = "^0.3.0"
asyncdagpi = "^3.3.2"
sr-api = {git = "https://github.com/iDutchy/sr_api"}
"discordlists.py" = "^1.1.1"
emoji = "^1.2.0"
"alexflipnote.py" = "^2.4.0"
asyncpraw = "^7.3.1"
tweepy = {git = "https://github.com/tweepy/tweepy.git", extras=["async"]}
topggpy = "^1.1.0"
CairoSVG = "^2.5.2"
python-cse = {git = "https://github.com/JDJGInc/python-cse"}
async-cleverbot = {git = "https://github.com/crrapi/async-cleverbot"}
aiogifs = {git = "https://github.com/moanie/aiogifs.git", branch = "main"}
better-profanity = "^0.7.0"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", extras = ["voice", "speed"]}
async-tio = "^1.1.0"
jeyyapi = {git = "https://github.com/JeyyGit/jeyyapi", branch = "main"}
tabulate = "^0.8.9"
asyncpg = "^0.25.0"
psutil = "^5.8.0"
black = "^21.12b0"
mathjspy = "^0.0.9"
chardet = "^3.0.4"
python-dotenv = "^0.19.2"
jishaku = {git = "https://github.com/Gorialis/jishaku"}
github = {git = "https://github.com/VarMonke/Github-Api-Wrapper", branch = "main"}
discord_games = {git = "https://github.com/Tom-the-Bomb/Discord-Games"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
