[tool.poetry]
name = "jdbot"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["JDJG <jdjgbot@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.10,<4.0.0"
asuna-api = ">=0.2.8"
async-cse = ">=0.3.0"
asyncdagpi = ">=3.3.2"
"discordlists.py" = ">=1.1.1"
emoji = ">=1.2.0"
"alexflipnote.py" = ">=2.4.0"
asyncpraw = ">=7.3.1"
tweepy = {git = "https://github.com/tweepy/tweepy.git", extras=["async"], branch="master"}
topggpy = ">=1.1.0"
python-cse = {git = "https://github.com/JDJGInc/python-cse"}
aiogifs = {git = "https://github.com/moanie/aiogifs.git", branch = "main"}
better-profanity = ">=0.7.0"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", extras = ["voice", "speed"], branch="master"}
async-tio = ">=1.1.0"
jeyyapi = {git = "https://github.com/JeyyGit/jeyyapi", branch = "main"}
tabulate = ">= 0.8.9"
asyncpg = ">=0.25.0"
psutil = ">=5.8.0"
black = ">=21.12b0"
mathjspy = ">=0.0.9"
chardet = ">=3.0.4"
jishaku = {git = "https://github.com/Gorialis/jishaku"}
github = {git = "https://github.com/VarMonke/Github-Api-Wrapper", branch = "main"}
discord_games = {git = "https://github.com/Tom-the-Bomb/Discord-Games"}
wand = ">=0.6.11"
mystbin-py = ">=5.1.0"
python-dateutil = ">=2.8.2"
pillow = ">=9.4.0"
somerandomapi-py = ">=0.0.2"
filetype = "^1.2.0"
discord-py-paginators = {git = "https://github.com/Soheab/discord-py-paginators", rev="5b2419746149d306878676637e0128bd13ea9d75"}

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
